--- a/style.css
+++ b/style.css
@@ -110,8 +110,178 @@ html {
   scroll-behavior: smooth;
 }
 
+.box-foto {
+  position: relative;
+  width: 370px; /* Atur ukuran bingkai */
+  height: 400px; /* Atur ukuran bingkai */
+  border-radius: 70%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  box-shadow: 0px 0px 20px 20px rgb(7, 187, 227);
+}
+
+.box-foto::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 70%;
+  background: radial-gradient(
+    circle,
+    rgba(7, 186, 227, 0) 60%,
+    rgba(7, 186, 227, 0.8) 70%,
+    rgb(7, 186, 227) 90%
+  ); /* Gradien transparan di tengah dan solid di tepi */
+  z-index: 10; /* Pastikan ini berada di depan gambar */
+  pointer-events: none; /* Bingkai tidak menghalangi interaksi dengan gambar jika diperlukan */
+}
+
+.box-foto img {
+  position: absolute;
+  /* transform: translate(-50%, -50%); */
+  object-fit: cover;
+  z-index: 1;
+  rotate: 330deg;
+  border-radius: 70;
+}
+
 .doSlideRight {
   animation: slideRight 1s ease forwards;
+  z-index: 1 !important;
+}
+
+.doSlideDown {
+  -webkit-animation: slideDown 1s ease forwards;
+  animation: slideDown 1s ease forwards;
+  opacity: 0;
+  z-index: 1 !important;
+}
+
+.bounch-slowly {
+  -webkit-animation: bounch 3s ease-in-out infinite;
+  /*Infiniteloop*/
+  animation: bounch 3s ease-in-out infinite;
+}
+
+.doSlideLeft {
+  opacity: 0;
+  animation: slideLeft 1s ease forwards;
+  z-index: 1 !important;
+}
+.fadein {
+  -webkit-animation: FadeIn 1s ease-in;
+  animation: FadeIn 1s ease-in;
+  z-index: 1 !important;
+}
+.fadein2 {
+  -webkit-animation: FadeIn2 3s ease-in-out;
+  animation: FadeIn2 3s ease-in-out;
+}
+
+.delay-1 {
+  animation-delay: 0s;
+}
+
+.delay-2 {
+  animation-delay: 0.2s;
+}
+
+.delay-3 {
+  animation-delay: 0.4s;
+}
+
+.delay-4 {
+  animation-delay: 0.6s;
+}
+.delay-5 {
+  animation-delay: 0.8s;
+}
+.delay-6 {
+  animation-delay: 1s;
+}
+.delay-7 {
+  animation-delay: 1.2s;
+}
+
+@keyframes slideLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes bounch {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px); /* Naik sedikit */
+  }
+  100% {
+    transform: translateY(0); /* Kembali ke posisi awal */
+  }
+}
+
+@keyframes FadeIn2 {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes FadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  50% {
+    opacity: 0.5;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(0.9);
+    -moz-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    -o-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
+
+@keyframes slideDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-100px);
+    -moz-transform: translateY(-100px);
+    -ms-transform: translateY(-100px);
+    -o-transform: translateY(-100px);
+    transform: translateY(-100px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+  }
 }
 
 @keyframes slideRight {
@@ -120,7 +290,11 @@ html {
     opacity: 0;
   }
   100% {
-    transform: translateX(0);
     opacity: 1;
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
   }
 }
